--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-        <title>About &middot; somethingneeddoing.com</title> 
+        <title>About &middot; somethingneeddoing</title> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/css/slim.css" rel="stylesheet" type="text/css" media="all">
 	</head>
@@ -10,7 +10,7 @@
     <div class="container">
 <div class="header">
       <ul class=menu>
-        <a class="site-title" href="http://example.org/">somethingneeddoing.com</a>
+        <a class="site-title" href="https://www.somethingneeddoing.com/">somethingneeddoing</a>
         <li><a class="menu__item menu__item_inside" href="/about">About</a>
       </ul>
 </li>
